# eigenda-client-rs

./: Cargo.toml  README.md
.github/workflow/: crates-release.yaml
.github/workflows/: codeql-scanning.yaml  eigenda-v2-cert-release.yaml
crates/rust-eigenda-cert/: Cargo.toml  README.md
crates/rust-eigenda-cert/src/: commitment_utils.rs  core.rs  eigenda_cert.rs  errors.rs  lib.rs
crates/rust-eigenda-cert/src/core/: blob_key.rs
crates/rust-eigenda-client/: Cargo.toml  README.md
crates/rust-eigenda-client/src/: blob_info.rs  client.rs  client_tests.rs  config.rs  errors.rs  eth_client.rs  lib.rs  sdk.rs  verifier.rs
crates/rust-eigenda-signers/: Cargo.toml  README.md
crates/rust-eigenda-signers/src/: lib.rs  public_key.rs  secret_key.rs  signature.rs
crates/rust-eigenda-signers/src/signers/: ethers.rs  private_key.rs
crates/rust-eigenda-v2-cert/: Cargo.toml  README.md
crates/rust-eigenda-v2-cert/src/: commitment_utils.rs
crates/rust-eigenda-v2-client/: Cargo.toml  README.md
crates/rust-eigenda-v2-client/proptest-regressions/: utils.txt
crates/rust-eigenda-v2-client/src/: accountant.rs  cert_verifier.rs  commitment_utils.rs  contracts_bindings.rs  core.rs  disperser_client.rs  errors.rs  eth_client.rs  lib.rs  payload_disperser.rs  relay_client.rs  relay_payload_retriever.rs  relay_registry.rs  retrieval_client.rs  tests.rs  utils.rs  validator_assigment.rs  validator_chain_state_provider.rs  validator_client.rs  validator_encoder.rs  validator_payload_retriever.rs  validator_reader.rs  validator_retrieval_worker.rs  validator_types.rs  validator_verifier.rs
crates/rust-eigenda-v2-client/src/core/: blob.rs  blob_key.rs  blob_request_signer.rs  eigenda_cert.rs  encoded_payload.rs  payload.rs  payment.rs
crates/rust-eigenda-v2-client/src/payloadretrieval/: relay_payload_retriever.rs
crates/rust-eigenda-v2-common/: Cargo.toml  README.md
crates/rust-eigenda-v2-common/src/: core.rs  eigenda_cert.rs  errors.rs  lib.rs
crates/rust-eigenda-v2-common/src/core/: blob.rs  check_da_cert_status.rs  encoded_payload.rs  payload.rs
