[package]
# This is named with the rust- prefix to match https://github.com/Layr-Labs/rust-kzg-bn254
# We will remove the prefix and publish as new crates once we combine all of these repos
# and move them into the eigenda monorepo.
name = "rust-eigenda-cert"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Layr-Labs/eigenda-client-rs"
description = "EigenDA Cert"
license = "MIT OR Apache-2.0"

[dependencies]
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ethabi = { workspace = true }
ethereum-types = { workspace = true }
serde = { workspace = true }
tiny-keccak = { workspace = true }
ark-serialize = { workspace = true }
rust-kzg-bn254-primitives = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
